<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Vaccine</string>
    <string name="title_covid_map">Map</string>
    <string name="viet_nam_in_the_last_updated">Viet Nam in the last updated</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="viet_nam">Viet Nam</string>
    <string name="global">Global</string>
    <string name="health">Health</string>
    <string name="hotline">Hotline</string>
    <string name="you_are_staying_in_safe_area">You are staying in safe area</string>
    <string name="advance">Advance</string>
    <string name="active">Active</string>
    <string name="_100">100%</string>
    <string name="policy_1">I commit that personal information is accurate and accept to provide personal information to make a booking</string>
    <string name="policy_2">I commit to arrive at the right time and place in order to book and stay safe according to the 5K regulations of the Ministry of Health</string>
    <string name="not_found_slot">The time you selected does not match</string>
    <string name="city">City</string>
    <string name="hospital">Hospital</string>
    <string name="description">Description</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="shift">Shift</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="phone_number_confirm">PHONE NUMBER CONFIRM</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp_code">OTP Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="address">Address</string>
    <string name="ward">Ward</string>
    <string name="district">District</string>
    <string name="national">National</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="app_name">Save</string>
    <string name="area">Area</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="logout">Logout</string>
    <string name="update">UPDATE</string>
    <string name="finish">FINISH</string>
    <string name="dd_mm_yyyy" translatable="false">dd-MM-yyyy</string>
    <string name="please_enter_validate_date">Please enter validate date</string>
    <string name="empty_notification_now">Empty Notification Now.</string>
    <string name="make_sure_the_phone_number_is_in_this_phone">Make sure the phone number is in this phone</string>
    <string name="you_must_agree_to_our_terms">You must agree to our terms</string>
    <string name="confirm_success">Confirm Success</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="confirm_failed">Confirm failed</string>
    <string name="check_in_success">Check in success</string>
    <string name="check_in_failed">Check in failed</string>
    <string name="check_out_success">Check out success</string>
    <string name="check_out_failed">Check out failed</string>
    <string name="vaccination_success">vaccination success</string>
    <string name="vaccination_failed">vaccination failed</string>
    <string name="check" translatable="false">check in success</string>
    <string name="status">Status</string>
    <string name="confirm_booking">Confirm</string>
    <string name="check_in_booking">Check-in</string>
    <string name="check_out_booking">Check-out</string>
    <string name="good_lung">Lung condition in the picture is good</string>
    <string name="bad_lung">The lung condition in the picture is not good, need to consult a doctor</string>
    <string name="enter_number">Please enter phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_gender">Other gender</string>
    <string name="isEmpty">Text is empty</string>
    <string name="send_sucess">Send sucess</string>
    <string name="textOTP">######</string>
    <string name="btn_back">Back</string>

</resources>