<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/gender"
                android:textSize="@dimen/font_size_18sp" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/birthdate"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="@dimen/size_5dp"
                android:gravity="center"
                android:padding="@dimen/size_5dp"
                android:text="@string/dd_mm_yyyy"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_calendar" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/city"
                android:textSize="@dimen/font_size_18sp" />

            <Spinner
                android:id="@+id/sp_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/district"
                android:textSize="@dimen/font_size_18sp" />

            <Spinner
                android:id="@+id/sp_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/ward"
                android:textSize="@dimen/font_size_18sp" />

            <Spinner
                android:id="@+id/sp_ward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/address"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18sp"
                tools:ignore="LabelFor" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_20dp"
                android:background="@drawable/bg_white_10"
                android:paddingHorizontal="@dimen/size_40dp"
                android:text="@string/finish"
                android:textColor="@color/pr_blue" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>