<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.notifications.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/size_80dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-115dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:text="@string/name"
                android:textSize="@dimen/font_size_18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_name_profile"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp"/>
            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/gender"
                android:textSize="@dimen/font_size_18sp"/>
            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10" />
            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/birthdate"
                android:textSize="@dimen/font_size_18sp" />
            <EditText
                android:id="@+id/edt_birthdate_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/address"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_address_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/tv_ward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/ward"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_ward_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/district"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_district_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/city"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_city_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />

            <TextView
                android:id="@+id/tv_national"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/national"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_national_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_white_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="@dimen/size_10dp"
                android:textSize="@dimen/font_size_18sp" />

            <Button
                android:id="@+id/btn_finish_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_20dp"
                android:background="@drawable/bg_white_10"
                android:paddingHorizontal="@dimen/size_40dp"
                android:text="@string/finish"
                android:textColor="@color/pr_blue" />

        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="240dp"
        android:layout_height="@dimen/size_80dp"
        android:background="@drawable/profile___copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layout_wait_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur"
        android:visibility="gone"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/pr_pink" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>