<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:layout_editor_absoluteX="30dp">

        <EditText
            android:id="@+id/txt_phone_number_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/size_15dp"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_10dp"
            android:background="@drawable/border"
            android:paddingHorizontal="@dimen/size_50dp"
            android:text="@string/start"
            android:textColor="@color/pr_blue" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_wait_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur"
        android:visibility="gone"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/pr_pink" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/otp_verification_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_verification_code"
            android:textColor="@color/pr_blue"
            android:textSize="@dimen/font_size_25sp" />

        <EditText
            android:id="@+id/txt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/textOTP"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/size_15dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back_to_phone_number"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_10dp"
                android:background="@drawable/bordergreen"
                android:text="@string/btn_back"
                android:textColor="@color/pr_blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_otp_verify"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_10dp"
                android:background="@drawable/bordergreen"
                android:text="@string/otp_verify"
                android:textColor="@color/pr_blue" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>